SPRINT_1: create index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="./src/assets/styles/base.scss" />
     <title>My First Parcel App</title>
   </head>
   <body>
