--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="./src/assets/styles/base.scss" />
-    <title>My First Parcel App</title>
+    <title>YaGram</title>
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <ul>
+      <li><a href="src/views/auth/signIn/signIn.pug">Вход</a></li>
+      <li><a href="src/views/auth/signUp/signUp.pug">Регистрация</a></li>
+      <li><a href="src/views/chat/chat.pug">Чат</a></li>
+      <li><a href="src/views/profile/profile.pug">Настройки</a></li>
+      <li><a href="src/views/404/404.pug">404</a></li>
+      <li><a href="src/views/500/500.pug">500</a></li>
+    </ul>
   </body>
 </html>
