SPRINT_2: update index.html

--- a/index.html
+++ b/index.html
@@ -7,15 +7,7 @@
     <title>YaGram</title>
   </head>
   <body>
-    <nav class="pages">
-      <ul>
-        <li><a href="src/views/auth/signIn/signIn.pug">Вход</a></li>
-        <li><a href="src/views/auth/signUp/signUp.pug">Регистрация</a></li>
-        <li><a href="src/views/chat/chat.pug">Чат</a></li>
-        <li><a href="src/views/profile/profile.pug">Настройки</a></li>
-        <li><a href="src/views/404/404.pug">404</a></li>
-        <li><a href="src/views/500/500.pug">500</a></li>
-      </ul>
-    </nav>
+    <div id="app"></div>
+    <script src="src/index.ts" type="module"></script>
   </body>
 </html>
