SPRINT_2: fix versions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>YaGram</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+    </div>
     <script src="src/index.ts" type="module"></script>
   </body>
 </html>
