--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="./src/assets/styles/_fonts.scss" />
-    <link rel="stylesheet" href="./src/assets/styles/base.scss" />
+    <!-- <link rel="stylesheet" href="./src/assets/styles/_fonts.scss" />
+    <link rel="stylesheet" href="./src/assets/styles/base.scss" /> -->
     <title>YaGram</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="src/index.ts" type="module"></script>
+    <!-- <script src="src/index.ts" type="module"></script> -->
   </body>
 </html>
